{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 18,
  "lineage": "a6980822-4be8-d32a-92d5-fe71962b8737",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0048800640a682af6",
            "association_id": "eipassoc-0d82d10c26c406428",
            "domain": "vpc",
            "id": "eipalloc-0048800640a682af6",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f975c7c613766862",
            "private_dns": "ip-120-0-0-86.ap-south-1.compute.internal",
            "private_ip": "120.0.0.86",
            "public_dns": "ec2-15-206-54-131.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.54.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eip"
            },
            "tags_all": {
              "Name": "test-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2_Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0376ec8eacdf70aae",
            "arn": "arn:aws:ec2:ap-south-1:690932370148:instance/i-0916895f9b6b4c365",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0916895f9b6b4c365",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "projectKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f88263d9a0554ac0",
            "private_dns": "ip-120-0-1-64.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "120.0.1.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00533b796a0943dca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0387937c986d4618a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce94d13209953d68",
            "tags": {
              "Name": "Ec2_Linux"
            },
            "tags_all": {
              "Name": "Ec2_Linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0387937c986d4618a"
            ]
          },
          "dependencies": [
            "aws_key_pair.projectKey",
            "aws_security_group.projectSGPrivate",
            "aws_subnet.PrivateSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:690932370148:internet-gateway/igw-0afd7ec5bb7f218c7",
            "id": "igw-0afd7ec5bb7f218c7",
            "owner_id": "690932370148",
            "tags": {
              "Name": "project_IG"
            },
            "tags_all": {
              "Name": "project_IG"
            },
            "vpc_id": "vpc-00611c3747bc54522"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "privateIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0048800640a682af6",
            "connectivity_type": "public",
            "id": "nat-014f51c5db4eac278",
            "network_interface_id": "eni-0f975c7c613766862",
            "private_ip": "120.0.0.86",
            "public_ip": "15.206.54.131",
            "subnet_id": "subnet-098cfc439c2264c30",
            "tags": {
              "Name": "privateIG"
            },
            "tags_all": {
              "Name": "privateIG"
            }
          },
          "dependencies": [
            "aws_eip.Nat_eip",
            "aws_internet_gateway.Project_gateway",
            "aws_subnet.PublicSubnet",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "NatRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0793b63438cc8869f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-014f51c5db4eac278",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0793b63438cc8869f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat_eip",
            "aws_internet_gateway.Project_gateway",
            "aws_nat_gateway.privateIG",
            "aws_subnet.PublicSubnet",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:690932370148:route-table/rtb-0e06216d6aef2cf44",
            "id": "rtb-0e06216d6aef2cf44",
            "owner_id": "690932370148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afd7ec5bb7f218c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00611c3747bc54522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Project_gateway",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071ee59b7beb5be31",
            "route_table_id": "rtb-0793b63438cc8869f",
            "subnet_id": "subnet-0ce94d13209953d68"
          },
          "dependencies": [
            "aws_subnet.PrivateSubnet",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publictable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aec32fa4bed3951",
            "route_table_id": "rtb-0e06216d6aef2cf44",
            "subnet_id": "subnet-098cfc439c2264c30"
          },
          "dependencies": [
            "aws_internet_gateway.Project_gateway",
            "aws_route_table.public_route",
            "aws_subnet.PublicSubnet",
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "projectSGPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:690932370148:security-group/sg-0387937c986d4618a",
            "description": "private_rule",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All_traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0387937c986d4618a",
            "ingress": [
              {
                "cidr_blocks": [
                  "120.0.0.0/16"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "120.0.0.0/16"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "120.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "120.0.0.0/16"
                ],
                "description": "tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "private_SG",
            "name_prefix": "",
            "owner_id": "690932370148",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00611c3747bc54522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:690932370148:subnet/subnet-0ce94d13209953d68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "120.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce94d13209953d68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690932370148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-00611c3747bc54522"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:690932370148:subnet/subnet-098cfc439c2264c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "120.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098cfc439c2264c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690932370148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-00611c3747bc54522"
          },
          "dependencies": [
            "aws_vpc.Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:690932370148:vpc/vpc-00611c3747bc54522",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "120.0.0.0/16",
            "default_network_acl_id": "acl-09f11013b7eb9a254",
            "default_route_table_id": "rtb-0793b63438cc8869f",
            "default_security_group_id": "sg-04bbddd24dc27d6d5",
            "dhcp_options_id": "dopt-01fca598935f0adc7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00611c3747bc54522",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0793b63438cc8869f",
            "owner_id": "690932370148",
            "tags": {
              "Name": "Project"
            },
            "tags_all": {
              "Name": "Project"
            }
          }
        }
      ]
    }
  ]
}